--- a/index.html
+++ b/index.html
@@ -54,6 +54,54 @@
                 </div>
             </div>
         </section>
+
+        <section class="benefits">
+            <div class="container benefits__container">
+
+                <div class="benefits__item">
+                    <div class="benefits__img-wrapper">
+                        <img src="images/icons/3d/heart.png" alt="" class="benefits__icon benefits__heart">
+                    </div>
+                    <p class="benefits__title">Tasty</p>
+                    <p class="benefits__desc">We have the most delicious coffee</p>
+                </div>
+
+
+                <div class="benefits__item">
+                    <div class="benefits__img-wrapper">
+                        <img src="images/icons/3d/rocket.png" alt="" class="benefits__icon benefits__rocket">
+                    </div>
+                    <p class="benefits__title">Fast</p>
+                    <p class="benefits__desc">Our cafe will serve you quickly</p>
+                </div>
+
+
+                <div class="benefits__item">
+                    <div class="benefits__img-wrapper">
+                        <img src="images/icons/3d/money.png" alt="" class="benefits__icon benefits__money">
+                    </div>
+                    <p class="benefits__title">Available</p>
+                    <p class="benefits__desc">Cafe will serveat the most pleasant prices</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="history">
+            <div class="history__container container">
+                <div class="history__img-wrapper">
+                    <img src="./images/room.jpg" alt="room" class="history__img">
+                </div>
+                <div class="history__desc">
+                    <h2 class="history__title title">We make <span class="gradient">delicious</h2>
+                    <p class="history__text">Only in 2021 we have made more than 100,000 orders for you, your loved
+                        ones, all of you, and in 2022 we are ready to
+                        destroy the market</p>
+                    <img src="./images/kitchen.jpg" alt="kitchen" class="history__pic">
+                </div>
+            </div>
+        </section>
+
+
     </main>
 </body>
 
