--- a/index.html
+++ b/index.html
@@ -101,7 +101,66 @@
             </div>
         </section>
 
-
+        <section class="products">
+            <div class="products__container container">
+                <div class="products__desc">
+                    <h2 class="products__title title">New Our <span class="gradient">Products</span></h2>
+                    <p class="products__text">Have time to buy the most harmonious drinks in the new Starbucks coffee
+                        and don't forget about the discount! <span class="hide-text-mobile">Starbucks coffee and don't
+                            forget about the discount!</span></p>
+                </div>
+                <div class="products__cards">
+                    <div class="products__card card-products">
+                        <div class="card-products__img-wrapper">
+                            <img src="./images/cups/green.png" alt="cup" class="card-products__img">
+                        </div>
+                        <p class="card-products__title">Latte</p>
+                        <p class="card-products__desc">Our cafe will serve you quickly</p>
+                        <div class="card-products__row">
+                            <div class="card-products__price">7,45$</div>
+                            <div class="card-products__size">330 ml</div>
+                        </div>
+                        <button type="button" class="card-products__btn btn">Buy Product</button>
+                    </div>
+                    <div class="products__card card-products">
+                        <div class="card-products__img-wrapper">
+                            <img src="./images/cups/brown.png" alt="cup" class="card-products__img">
+                        </div>
+                        <p class="card-products__title">Espresso</p>
+                        <p class="card-products__desc">Our cafe will serve you quickly</p>
+                        <div class="card-products__row">
+                            <div class="card-products__price">3,45$</div>
+                            <div class="card-products__size">330 ml</div>
+                        </div>
+                        <button type="button" class="card-products__btn btn">Buy Product</button>
+                    </div>
+                    <div class="products__card card-products">
+                        <div class="card-products__img-wrapper">
+                            <img src="./images/cups/yellow.png" alt="cup" class="card-products__img">
+                        </div>
+                        <p class="card-products__title">Americano</p>
+                        <p class="card-products__desc">Our cafe will serve you quickly</p>
+                        <div class="card-products__row">
+                            <div class="card-products__price">10,45$</div>
+                            <div class="card-products__size">330 ml</div>
+                        </div>
+                        <button type="button" class="card-products__btn btn">Buy Product</button>
+                    </div>
+                    <div class="products__card card-products">
+                        <div class="card-products__img-wrapper">
+                            <img src="./images/cups/green.png" alt="cup" class="card-products__img">
+                        </div>
+                        <p class="card-products__title">Cappuccino</p>
+                        <p class="card-products__desc">Our cafe will serve you quickly</p>
+                        <div class="card-products__row">
+                            <div class="card-products__price">8,45$</div>
+                            <div class="card-products__size">330 ml</div>
+                        </div>
+                        <button type="button" class="card-products__btn btn">Buy Product</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
