--- a/index.html
+++ b/index.html
@@ -103,9 +103,11 @@
 
         <section class="products">
             <div class="products__container container">
-                <div class="products__desc">
-                    <h2 class="products__title title">New Our <span class="gradient">Products</span></h2>
-                    <p class="products__text">Have time to buy the most harmonious drinks in the new Starbucks coffee
+                <div class="text-row products__desc">
+                    <h2 class="products__title title text-row__title">New Our <span class="gradient">Products</span>
+                    </h2>
+                    <p class="products__text text-row__text">Have time to buy the most harmonious drinks in the new
+                        Starbucks coffee
                         and don't forget about the discount! <span class="hide-text-mobile">Starbucks coffee and don't
                             forget about the discount!</span></p>
                 </div>
@@ -157,6 +159,41 @@
                             <div class="card-products__size">330 ml</div>
                         </div>
                         <button type="button" class="card-products__btn btn">Buy Product</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="events">
+            <div class="container events__container">
+                <div class="text-row text-row--reverce events__desc">
+                    <h2 class="title text-row__title events__title">Our New <span class="gradient">Events</span>
+                    </h2>
+                    <p class="text-row__text events__text">Only in 2021 we have made more than 100,000 orders for you,
+                        your loved ones, all
+                        of you, and in 2022 we are ready to destroy the market</p>
+                </div>
+
+                <div class="events__inner-wrapper">
+                    <div class="event event--price">
+                        <h3 class="event__title">TWO COFFEE FOR 1 PRICE</h3>
+                        <a href="#!" class="btn event__btn">More</a>
+                    </div>
+                    <div class="event event--kitchen">
+                        <h3 class="event__title">Kitchen<br>tour</h3>
+                        <a href="#!" class="btn event__btn">More</a>
+                    </div>
+                    <div class="event event--free">
+                        <h3 class="event__title">FREE COFFEE FOR 3 COFFEE</h3>
+                        <a href="#!" class="btn event__btn">More</a>
+                    </div>
+                    <div class="event event--social">
+                        <h3 class="event__title">OUR<br>SOCIALS</h3>
+                        <a href="#!" class="btn event__btn">More</a>
+                    </div>
+                    <div class="event event--choose">
+                        <h3 class="event__title">WHERE ARE YOU CHOOSE US?</h3>
+                        <a href="#!" class="btn event__btn">More</a>
                     </div>
                 </div>
             </div>
