--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                         about
                         the discount!</p>
                     <div class="welcome__btn-wrapper">
-                        <a href="#!" class="btn">Select a coffee</a>
-                        <a href="#!" class="btn btn_transparent">More</a>
+                        <a href="#!" class="btn welcome__btn">Select a coffee</a>
+                        <a href="#!" class="btn welcome__btn btn_transparent">More</a>
                     </div>
                     <div class="welcome__stats stats">
                         <p class="stats__item">
